--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,13 @@
             "name": "Davi Marcondes Moreira (@devdrops)",
             "email": "davi.marcondes.moreira@gmail.com"
         }
-    ]
+    ],
+    "autoload": {
+        "psr-0": {
+            "EvilDead": "src/"
+        },
+        "psr-4": {
+            "EvilDead\\": "src/"
+        }
+    }
 }
