--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,8 @@
         "psr-4": {
             "EvilDead\\": "src/"
         }
+    },
+    "require": {
+        "phpunit/phpunit": "@stable"
     }
 }
